--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <div class="contenedor">
+            <div class="contenedor"> <!--Este DIV contiene el header donde estan las opciones de menú-->
                 <div id="logo">
                     <h1>Autorepuestos Don Piston</h1>
                 </div>
@@ -29,12 +29,12 @@
             </div>
         </section>
 
-        <section id="noticias">
+        <section id="noticias"> <!--Apartado para newsletter-->
             <div class="contenedor">
                 <h1>Enterate de las mejores ofertas</h1>
                 <form>
-                    <input type="email" placeholder="Escribe tu correo">
-                    <button type="submit" class="boton1">Suscribete</button>
+                    <input type="email" placeholder="Escribe tu correo"> <!--Permite tener un texto en el form-->
+                    <button type="submit" class="boton1">Suscribete</button> <!--Boton submit para form-->
                 </form>
             </div>
         </section>
