--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <header>
             <div class="contenedor"> <!--Este DIV contiene el header donde estan las opciones de menú-->
                 <div id="logo">
-                    <h1>Autorepuestos Don Piston</h1>
+                    <h1>Autorepuestos<span class="iluminado"> Don Piston</span></h1>
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Inicio</a></li>
+                        <li class="current"><a href="index.html">Inicio</a></li>
                         <li><a href="index.html">Sobre Nosotros</a></li>
                         <li><a href="index.html">Servicios</a></li>
                     </ul>
