--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <div class="contenedor"> <!--Este DIV contiene el header donde estan las opciones de menú-->
                 <div id="logo">
-                    <h1>Autorepuestos<span class="iluminado"> Don Piston</span></h1>
+                    <h1>Autorepuestos<span class="iluminado"> Don Pistón</span></h1>
                 </div>
                 <nav>
                     <ul>
@@ -54,8 +54,17 @@
 
             </div>
         </section>
+        <section id="contacto">
+            <div class="contenedor">
+                <div class="tel">
+                    <img src="" alt="">
+                <h3>Contactanos</h3>
+                <p>+502 3264-5655</p>
+                </div>
+             </div>
+        </section>
         <footer>
-            <p>Todos los derechos reservados a Autorepuestos Don Piston &copy; 2022</p>
+            <p>Todos los derechos reservados a Autorepuestos Don Pistón &copy; 2022</p>
         </footer>
     </body>
 </html>
